--- a/GDG/GDG/View/Storyborad/Mypage.storyboard
+++ b/GDG/GDG/View/Storyborad/Mypage.storyboard
@@ -18,10 +18,11 @@
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <navigationItem key="navigationItem" id="cxU-0i-CqL"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="45" y="84"/>
+            <point key="canvasLocation" x="955.07246376811599" y="83.705357142857139"/>
         </scene>
     </scenes>
     <resources>
