--- a/GDG/GDG/Base.lproj/LaunchScreen.storyboard
+++ b/GDG/GDG/Base.lproj/LaunchScreen.storyboard
@@ -15,8 +15,19 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splash-2" translatesAutoresizingMaskIntoConstraints="NO" id="mgt-xN-hoe">
+                                <rect key="frame" x="0.0" y="82" width="414" height="896"/>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="mgt-xN-hoe" secondAttribute="bottom" constant="-82" id="EVc-ds-62m"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="mgt-xN-hoe" secondAttribute="trailing" id="YB5-1M-0cW"/>
+                            <constraint firstItem="mgt-xN-hoe" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" constant="82" id="d9p-xg-JUL"/>
+                            <constraint firstItem="mgt-xN-hoe" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="iBo-h9-LwN"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -25,6 +36,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="splash-2" width="360" height="640"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
